[project]
name = "resource-hub-intake"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "slack-bolt==1.21.3",
    "requests==2.32.3",
    "beautifulsoup4==4.12.3",
    "litellm==1.52.0",
    "instructor==1.7.0",
    "pydantic==2.10.3",
    "notion-client==2.2.1",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-mock==3.14.0",
    "responses==0.25.3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
